Addded adaptivity, new design

--- a/homepage.html
+++ b/homepage.html
@@ -6,25 +6,26 @@
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     </head>
     <body>
-
-      <div class="turn"> Lets start! </div>
-
-  		<div class = "board">
-  			<button class ="b"></button>
-        <button class ="b"></button>
-        <button class ="b"></button>
-
-  			<button class ="b"></button>
-        <button class ="b"></button>
-        <button class ="b"></button>
-
-  			<button class ="b"></button>
-        <button class ="b"></button>
-        <button class ="b"></button>
-      </div>
       <div class="container">
-        <div class="reset" onclick="Reset()">Reset the board</div>
+          <div class="output"> Lets start! </div>
+
+  		        <div class = "board">
+  			<button class ="b"></button>
+        <button class ="b"></button>
+        <button class ="b"></button>
+
+  			<button class ="b"></button>
+        <button class ="b"></button>
+        <button class ="b"></button>
+
+  			<button class ="b"></button>
+        <button class ="b"></button>
+        <button class ="b"></button>
+               </div>
+
+         <div class="reset" onclick="Reset()">Reset the board</div>
       </div>
+    </div>
   		<br>
     </body>
     <script src="./homepage.js"></script>
