Reworked logic, added OOP

--- a/homepage.html
+++ b/homepage.html
@@ -10,20 +10,20 @@
           <div class="output"> Lets start! </div>
 
   		        <div class = "board">
-  			<button class ="b"></button>
-        <button class ="b"></button>
-        <button class ="b"></button>
+          			<button class ="b"></button>
+                <button class ="b"></button>
+                <button class ="b"></button>
 
-  			<button class ="b"></button>
-        <button class ="b"></button>
-        <button class ="b"></button>
+          			<button class ="b"></button>
+                <button class ="b"></button>
+                <button class ="b"></button>
 
-  			<button class ="b"></button>
-        <button class ="b"></button>
-        <button class ="b"></button>
+          			<button class ="b"></button>
+                <button class ="b"></button>
+                <button class ="b"></button>
                </div>
 
-         <div class="reset" onclick="Reset()">Reset the board</div>
+         <button class="reset" onclick="Reset()">Reset the board</button>
       </div>
     </div>
   		<br>
