added bot functionality

--- a/homepage.html
+++ b/homepage.html
@@ -22,8 +22,9 @@
                 <button class ="b"></button>
                 <button class ="b"></button>
                </div>
+				
+			<button class="reset">Reset the board</button>
 
-         <button class="reset" onclick="Reset()">Reset the board</button>
       </div>
     </div>
   		<br>
